# Smooosie

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Compare.h  Const.h  PluginProcessor.cpp
tests/: CMakeLists.txt  Mock_Test.cpp  PluginProcessor_Test.cpp
